# icfp19_workers-wrappers

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  icfp19.code-workspace
fuqinho/: main.cc  main2.cc  mine.h  solve_all.sh
fuqinho/gflags/_objs/gflags/: gflags.d  gflags_completions.d  gflags_reporting.d
fuqinho/glog/_objs/glog/: demangle.d  logging.d  raw_logging.d  signalhandler.d  symbolize.d  utilities.d  vlog_is_on.d
results/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  23.txt  3.txt  4.txt  49.txt  5.txt  50.txt  51.txt  6.txt  7.txt  8.txt  9.txt  order-150.txt  split-150.txt
scores/: 100_s100_p300_p3000_p1000_2634  101_s300_p300_p3000_p1000_9225  102_s300_p300_p3000_p1000_8259  103_s300_p300_p3000_p1000_10149  104_s300_p300_p3000_p1000_9048  105_s300_p300_p3000_p1000_8948  106_s300_p300_p3000_p1000_9850  107_s300_p300_p3000_p1000_8569  108_s300_p300_p3000_p1000_10207  109_s300_p300_p3000_p1000_10420  10_s30_p300_p3000_p1000_275  110_s300_p300_p3000_p1000_8816  111_s300_p300_p3000_p1000_9827  112_s300_p300_p3000_p1000_9015  113_s300_p300_p3000_p1000_7367  114_s300_p300_p3000_p1000_8432  115_s300_p300_p3000_p1000_7934  116_s300_p300_p3000_p1000_7589  117_s300_p300_p3000_p1000_9747  118_s300_p300_p3000_p1000_9483  119_s300_p300_p3000_p1000_9997  11_s30_p300_p3000_p1000_339  120_s300_p300_p3000_p1000_8943  121_s300_p300_p3000_p1000_10652  122_s300_p300_p3000_p1000_9260  123_s300_p300_p3000_p1000_8351  124_s300_p300_p3000_p1000_10104  125_s300_p300_p3000_p1000_9286  126_s300_p300_p3000_p1000_10409  127_s300_p300_p3000_p1000_7473  128_s300_p300_p3000_p1000_10316  129_s300_p300_p3000_p1000_10887  12_s30_p300_p3000_p1000_432  130_s300_p300_p3000_p1000_9807  131_s300_p300_p3000_p1000_9060  132_s300_p300_p3000_p1000_9503  133_s300_p300_p3000_p1000_7168  134_s300_p300_p3000_p1000_10093  135_s300_p300_p3000_p1000_10023  136_s300_p300_p3000_p1000_12540  (+123 more)
src/: Visualiser.html  agent.cpp  agent.h  common.h  fileparser.cpp  fileparser.h  genetic_optimizer.cpp  genetic_optimizer.h  genetic_orderer.cpp  genetic_orderer.h  genetic_splitter.cpp  genetic_splitter.h  main.cpp  mine.cpp  mine.h  optimizer.cpp  orderer.cpp  partitionner.cpp  renderer.cpp  renderer.h  solver.cpp  solver.h
